     only edit the languagetool.cfg file when LT is not running.

Internal:
    -Words are not ignored anymore by the spell checker just because they occur in
     a rule's suggestion. If you want the spell checker to ignore words globally, add
     them to hunspell/ignore.txt. To ignore them depending on the context, add a
     'ignore_spelling' rule to disambiguation.xml.


2.7 (2014-09-29)

-Breton:
    -added and improved rules
    -New rule that checks if a weekday matches a date, e.g. detects
     "Gwener 28 a viz Eost 2014", as that date isn't a Friday.
     
-Catalan:
    -added and improved rules
    -fixed false alarms
    -updated dictionary

-Dutch:
    -added and improved many rules
    -switched to Morfologik-based spell checker

-English:
    -Do you want to be part of the team that develops the world's most powerful
     Open Source proofreading tool? We're looking for a maintainer for the English
     rules in LanguageTool. See http://wiki.languagetool.org/tasks-for-language-maintainers
     for details.
    -All English dictionaries have been extended to contain word frequency classes
     to improve the spell checker suggestions (the frequency data is taken from
     https://github.com/mozilla-b2g/gaia/tree/master/apps/keyboard/js/imes/latin/dictionaries,
     as for other languages that already use this feature).
    -Better suggestions for English learners: irregular verbs, nouns, and adjectives now
     usually have a better suggestion. For example, 'thinked' suggests 'thought',
     'womans' suggests 'women'.
    -More misspellings provide suggestions now, e.g. 'garentee' (guarantee),
    'greatful' (grateful). This may cause a performance decrease of ~ 10% (more for
     texts with a lot of unknown words).
    -New rule that checks if a weekday matches a date, e.g. detects
     "Monday, 7 October 2014", as that date isn't a Monday. This rule will only
     work if it detects the date format in use. So far, these formats are supported: