@@ -1,4 +1,5 @@
-# words to be ignored by the spellchecker (partially generated by SuggestionExtractorTool, also see below)
+# Words to be ignored by the spellchecker (partially generated by SuggestionExtractorTool, also see below)
+# For the opposite (do not accept words), see prohibit.txt.
 einPseudoWortFürLanguageToolTests
 -jähriges
 -jährigem
