@@ -1,0 +1,10 @@
+# Words to be marked as spelling errors even if the spell checker
+# accepts them. Useful to improve the spell checker without touching
+# its files (which are usually not from LT).
+# For the opposite (accept words), see ignore.txt.
+Weihnachtsfreier
+Weihnachtsfreiern
+Weihnachtfreier
+Weihnachtfreiern
+Geburtstagsfreier
+Geburtstagsfreiern
