@@ -83,6 +83,12 @@ Internal:
      a rule's suggestion. If you want the spell checker to ignore words globally, add
      them to hunspell/ignore.txt. To ignore them depending on the context, add a
      'ignore_spelling' rule to disambiguation.xml.
+    -A file 'hunspell/prohibit.txt' can now be used to mark words as spelling errors
+     even if the spell checker would normally accept them. This is useful to improve
+     the LanguageTool spell checker without waiting for the upstream checker to be
+     updated.
+     The 'prohibit.txt' file is the opposite of 'ignore.txt', which causes the
+     spell checker to ignore words.
 
 
 2.7 (2014-09-29)
